--- a/README
+++ b/README
@@ -7,5 +7,12 @@ Requires (all them installable with `sudo gem install`):
   - rubygems
   - httparty
   - terminator
+  
+## TODO
+
+ - implement the Rest of the methods
+ - tests
+ - include Memcache Cache proxy
+ 
 
 Copyright (c) 2008 [Fernando Blat](http://www.inwebwetrust.net), released under the MIT license
