--- a/README
+++ b/README
@@ -6,13 +6,12 @@ Requires (all them installable with `sudo gem install`):
 
   - rubygems
   - httparty
-  - terminator
+  - mocha
+  - timeout
   
 ## TODO
 
- - implement the Rest of the methods
- - tests
- - include Memcache Cache proxy
- 
+ - implement the rest of the methods
+ - tests 
 
-Copyright (c) 2008 [Fernando Blat](http://www.inwebwetrust.net), released under the MIT license
+Copyright (c) 2009 [Fernando Blat](http://www.inwebwetrust.net), released under the MIT license
